<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_gray">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/titleNewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_new_group"
            style="@style/style_h1"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cardEtNewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_cards"
            app:cardElevation="@dimen/corner_cards"
            app:cardUseCompatPadding="true"

            android:layout_below="@+id/titleNewGroup"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/etNewGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:textAlignment="center" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardTvParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_cards"
            app:cardElevation="@dimen/corner_cards"

            android:layout_below="@+id/cardEtNewGroup"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/tvGroupSelected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/participants"
                android:gravity="center_vertical|center_horizontal"/>

        </android.support.v7.widget.CardView>

        <ListView
            android:id="@+id/listParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cardTvParticipants"
            android:layout_above="@+id/btnNewParticipant" />


        <Button
            android:id="@+id/btnNewParticipant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_new_participant"
            android:layout_above="@+id/btnClearList"
            android:layout_alignParentStart="true"
            android:onClick="newParticipant"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@color/azure"/>

        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/btnClearList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear_list"
            android:layout_above="@+id/fabBack"
            android:layout_alignParentStart="true"
            android:onClick="clear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@color/azure"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:src="@drawable/ic_arrow_left"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_arrow_right"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</RelativeLayout>